--- a/templates/analyze.html
+++ b/templates/analyze.html
@@ -3,7 +3,7 @@
     <head>
         <title>Textutils</title>
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
-
+       
 <!-- JS, Popper.js, and jQuery -->
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
@@ -32,10 +32,30 @@
         </button>
       </div>
       <div class="container">
-     <h1>Your Operation:{{ analyze }}</h1>
+     <h1 class=" chk">Your Operation:{{ analyze }}</h1>
      <p>
          <pre>{{analyzetext}}</pre>
      </p>
     </div>
+    <footer>
+      <div class="foot">
+        <h3>&copy 2020 - Textutils</h3>
+      </div>
+    </footer>
+       <style>
+          .chk{
+               color: rgb(104, 180, 243);
+              }
+         .foot{
+           position: fixed;
+            left: 0;
+            bottom: 0;
+            width: 100%;
+            color: white;
+            text-align: center;
+           background-color: rgba(137, 196, 244, 1);
+         }          
+         </style>
+        
  </body>    
 </html>
