--- a/templates/error.html
+++ b/templates/error.html
@@ -35,10 +35,30 @@
           </div>
           <div class="container">
             <p>
-               <h1 class="text-center">Please select any option and try again</h1> 
+               <h1 class="text-center chk">Please select any option and try again</h1> 
              </p>
           </div>
         
-        
+          <footer>
+            <div class="foot">
+              <h3>&copy 2020 - Textutils</h3>
+            </div>
+          </footer>
+             <style>
+               .chk{
+                color: rgb(104, 180, 243);
+               }
+               .foot{
+                 position: fixed;
+            left: 0;
+            bottom: 0;
+            width: 100%;
+            
+            color: white;
+            text-align: center;
+                 background-color: rgba(137, 196, 244, 1);
+               }
+                  
+               </style>
         </body>
         </html
